# khonsu

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: deploy-doc.yml
khonsu/: crates.js  help.html  search-index.js  settings.html  src-files.js
khonsu/khonsu/: all.html  index.html  sidebar-items.js
khonsu/khonsu/arrow_utils/: fn.merge_record_batches.html  index.html  sidebar-items.js
khonsu/khonsu/conflict/: index.html  sidebar-items.js
khonsu/khonsu/conflict/detection/: enum.ConflictType.html  fn.detect_conflicts.html  index.html  sidebar-items.js
khonsu/khonsu/conflict/resolution/: enum.ConflictResolution.html  index.html
khonsu/khonsu/data_store/: index.html  sidebar-items.js
khonsu/khonsu/data_store/txn_buffer/: index.html  sidebar-items.js  struct.TxnBuffer.html
khonsu/khonsu/data_store/versioned_value/: index.html  sidebar-items.js  struct.VersionedValue.html
khonsu/khonsu/dependency_tracking/: index.html  sidebar-items.js  struct.DataItem.html  struct.DependencyTracker.html
khonsu/khonsu/distributed/: enum.TransactionState.html  index.html  sidebar-items.js  struct.GlobalTransactionId.html  struct.ReplicatedCommit.html  struct.ReplicatedCommitSnapshot.html  struct.SerializableVersionedValue.html
khonsu/khonsu/distributed/channel_ext/: index.html  sidebar-items.js  struct.NodeSender.html  trait.SenderExt.html
khonsu/khonsu/distributed/dist_config/: index.html  sidebar-items.js  struct.KhonsuDistConfig.html
khonsu/khonsu/distributed/grpc_server/: fn.start_grpc_server.html  index.html  sidebar-items.js  struct.KhonsuOmniPaxosService.html
khonsu/khonsu/distributed/manager/: index.html  sidebar-items.js  struct.DistributedCommitManager.html
khonsu/khonsu/distributed/network/: index.html  sidebar-items.js  struct.KhonsuNetwork.html
khonsu/khonsu/distributed/paxos_service/: index.html  sidebar-items.js  struct.ConsensusMessage.html  struct.ReplicatedCommitMessage.html  struct.SendMessageResponse.html
khonsu/khonsu/distributed/prelude/: index.html
khonsu/khonsu/distributed/storage/: index.html  sidebar-items.js  struct.DistributedCommitStorage.html
khonsu/khonsu/distributed/twopc/: enum.ParticipantState.html  enum.TwoPhaseCommitPhase.html  index.html  sidebar-items.js  (+3 more)
khonsu/khonsu/errors/: enum.KhonsuError.html  index.html  sidebar-items.js  type.Result.html
khonsu/khonsu/isolation/: enum.TransactionIsolation.html  index.html  sidebar-items.js
khonsu/khonsu/khonsu/: index.html  sidebar-items.js  struct.Khonsu.html
khonsu/khonsu/prelude/: constant.READ_ERROR_MSG.html  constant.WRITE_ERROR_MSG.html  derive.Entry.html  derive.UniCacheEntry.html  enum.LogEntry.html  index.html  sidebar-items.js  struct.ClusterConfig.html  struct.FlexibleQuorum.html  struct.LogSync.html  struct.SequenceNumber.html  struct.SnapshottedEntry.html  type.ConfigurationId.html  type.NodeId.html  type.TrimmedIndex.html
khonsu/khonsu/storage/: enum.StorageMutation.html  index.html  sidebar-items.js  trait.Storage.html
khonsu/khonsu/transaction/: enum.DistributedCommitOutcome.html  index.html  sidebar-items.js  struct.Transaction.html
khonsu/search.desc/khonsu/: khonsu-desc-0-.js
khonsu/src/khonsu/: arrow_utils.rs.html  dependency_tracking.rs.html  errors.rs.html  isolation.rs.html  khonsu.rs.html  lib.rs.html  storage.rs.html  transaction.rs.html
khonsu/trait.impl/tower_service/: trait.Service.js
khonsu/type.impl/std/: primitive.u32.js  primitive.usize.js
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
proto/: paxos.proto
src/: arrow_utils.rs  dependency_tracking.rs  errors.rs  isolation.rs  khonsu.rs  lib.rs  storage.rs  transaction.rs  twopc.rs
src/conflict/: detection.rs  mod.rs  resolution.rs
src/data_store/: mod.rs  txn_buffer.rs  versioned_value.rs
src/distributed/: channel_ext.rs  coordinator.rs  dist_config.rs  grpc_server.rs  manager.rs  mod.rs  network.rs  storage.rs  twopc.rs
tests/: basic_transaction.rs  concurrency_tests.rs  distributed_tests.rs  mock_storage.rs
tests/common/: mod.rs
tests/distributed/: basic_distributed.rs  consistency_tests.rs  crash_recovery.rs  mod.rs  network_tests.rs  performance_tests.rs  test_helpers.rs
(+49 files in other folders)
