[package]
name = "khonsu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ahash = "0.8"
arrow = { version = "55", default-features = false, features = ["ipc"] }
thiserror = "2"
futures = { version = "0.3", features = ["executor"] }
parking_lot = "0.12"
rocksdb = { version = "0.23", optional = true, features = ["multi-threaded-cf"] } # Add rocksdb dependency
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3", optional = true }
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1.28", optional = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[features]
default = ["distributed"]
distributed = ["omnipaxos", "rocksdb", "crossbeam-channel", "bincode", "tonic", "prost", "tokio"]

[dependencies.omnipaxos]
git = "https://github.com/haraldng/omnipaxos.git"
optional = true
features = ["serde"]

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"

[dev-dependencies]
rand = "0.9.1"
tempfile = "3.19.1"

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
